--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
     "typewriter-effect": "^2.20.1",
     "web-vitals": "^2.1.4"
