--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "homepage": "https://arjundangi01.github.io",
   "dependencies": {
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
