--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@react-three/drei": "^9.99.7",
+    "@react-three/fiber": "^8.15.19",
+    "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "framer-motion": "^11.0.8",
     "react-intersection-observer": "^9.8.1",
     "react-parallax-tilt": "^1.7.214",
     "tailwind-scrollbar": "^3.1.0",
-    "@react-three/fiber": "^8.15.19",
-    "@react-three/drei": "^9.99.7",
     "three": "^0.162.0"
   },
   "devDependencies": {
@@ -33,6 +33,7 @@
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
+    "gh-pages": "^6.3.0",
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
